增加 Redis, Memcached 設定

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Laravel-Template
 APP_ENV=local
 APP_KEY=base64:ZxUqMo1qZRqsgBbogjzcOi7U+HEY7f2e4WmigrMxmsc=
 APP_DEBUG=true
@@ -36,13 +36,17 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
-CACHE_STORE=database
-CACHE_PREFIX=
+CACHE_DRIVER=memcached
+CACHE_STORE=memcached
+CACHE_PREFIX=Laravel-Template-cache
 
-MEMCACHED_HOST=127.0.0.1
+MEMCACHED_HOST=memcached
+MEMCACHED_PORT=11211
+MEMCACHED_PERSISTENT_ID=Laravel-Template-persistent-id
+MEMCACHED_USERNAME=null
+MEMCACHED_PASSWORD=null
 
-REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
