--- a/.env
+++ b/.env
@@ -36,9 +36,8 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
-CACHE_DRIVER=memcached
-CACHE_STORE=memcached
-CACHE_PREFIX=Laravel-Template-cache
+CACHE_DRIVER=redis
+CACHE_STORE=redis
 
 MEMCACHED_HOST=memcached
 MEMCACHED_PORT=11211
